Fixed several places with broken text color and background because of "improvements" of root site.

--- a/basic.styl
+++ b/basic.styl
@@ -80,8 +80,8 @@ rich-element-recolor2()
         background-color mainBgColor
 
     .author__info .row
+    .design-button--default
         background-color transparent
-
 
     .sidebar, .tile, .main, .tips, .promo__inner, .content__more 
     .content--bg, .content--breadcrumb, .content--detail, .content--promo
@@ -94,6 +94,8 @@ rich-element-recolor2()
     .impressum__rubrics
     .layout-columns__item--main
     .box-articles__content
+    .design-tile
+    .layout-main
         background-color tileBgColor
 
 .detail__perex .perex
@@ -178,6 +180,7 @@ rich-element-recolor2()
     .author__name a
     .impressum__rubrics
     .perex__date
+    .design-sidebar .promotips .link__text
         color textColorDark
         
     .impressum__date svg
@@ -231,6 +234,8 @@ rich-element-recolor2()
         
     .opinion-summary a
     .opinions-add
+    .design-button--highlighted
+    .opinions-button--version-1
         button-recolor()
 
     .opinion-odpovedet
@@ -246,6 +251,9 @@ rich-element-recolor2()
     .msg.info, ul.messages li.info
         border-color richBorderColor
         background-color richBgColor
+        color textColor
+        
+    .opinions-comment-rating__count
         color textColor
     
 .rcf-tag-color
