Fixed forum button on main page.

--- a/basic.styl
+++ b/basic.styl
@@ -80,7 +80,6 @@ rich-element-recolor2()
         background-color mainBgColor
 
     .author__info .row
-    .design-button--default
         background-color transparent
 
     .sidebar, .tile, .main, .tips, .promo__inner, .content__more 
@@ -494,6 +493,9 @@ tile-padding()
     #newTopic
         margin-top -5px
         margin-right 1px
+        
+    .design-button--default
+        button-recolor()
 
 /* Actualities */
 .rcf-tag-color
